# Burn_malaria_model

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: mod.rs  model_config.rs
src/model/: malaria_cnn.rs  mod.rs
src/training/: mod.rs  trainer.rs
