[package]
name = "Burn_model"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_model"
path = "src/bin/test_model.rs"

[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]

# dependenciese model 
burn = { version = "~0.19", features = ["std", "tui", "train", "vision", "ndarray", "autodiff"], default-features = false }
burn-dataset = "0.19.1"
burn-ndarray = "0.19.1"
burn-wgpu = "0.19.1"
burn-tensor = "0.19.1"
burn-train = "0.19.1"
burn-nn = "0.19.1"
burn-autodiff = "0.19.1"

image = "0.25.9"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }

#dependencies  api 
actix-web = "4.4"
actix-files = "0.6"
actix-multipart = "0.6"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3